--- a/checkout.html
+++ b/checkout.html
@@ -21,6 +21,7 @@
           </span>
         </div>
         <ul>
+          <li><a class="button-nav" href="home.html">Home</a> </li>
           <li><a class="button-nav" href="services.html">Services</a> </li>
           <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
           <li><a class="button-nav" href="index.html">Style Guide</a> </li>
