added viewport meta tag to all pages
added the tag within the <head> code so that I can use queries

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title> Home </title>
     <link href="css/main.css" rel="stylesheet">
     <link href="css/queries.css" rel="stylesheet">
@@ -33,83 +34,73 @@
     <!-- reference for flexbox gallery for images from https://css-tricks.com/adaptive-photo-layout-with-flexbox/ -->
     <div class="container">
       <div class="block">
-        <div class="crop-header">
-          <img src="images/ext.jpg" alt="detailing header">
+          <div class="crop-header">
+            <img src="images/ext.jpg" alt="detailing header">
+          </div>
+          <div class="header-text">
+            <h1>About Us</h1>
+            <p> Company updates & who we are.</p>
+          </div>
         </div>
-        <div class="header-text">
-          <h1>Services</h1>
-          <p>Home service. No hassle.</p>
-        </div>
+    </div>
+
+    <div class="container-about-us">
+      <div class="block-about-us">
+        <h2> Company updates </h2>
+        <img src="images/placeholder.png" alt="picture of staff">
+      </div>
+
+      <div class="block-about-us">
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+        </p>
+      </div>
+
+      <div class="block-about-us">
+        <h2> What do we offer? </h2>
+        <p> Automobile Detailing is a mobile automotive detailing company. We come to your home and make the interior and exterior of your vehicle look brand new! This includes carpet steaming, full waxes, and much more to restore the look of your vehicle.
+        </p>
+      </div>
+
+      <div class="block-about-us">
+        <img src="images/placeholder.png" alt="picture a work truck in a driveway">
+      </div>
+
+      <div class="block-about-us">
+        <h2> Why book us? </h2>
+        <img src="images/placeholder.png" alt="picture of shiny car">
+      </div>
+
+      <div class="block-about-us">
+        <p>Our services appeal to anyone wanting their vehicle to look showroom ready for personal satisfaction, maintenance, or in preparation for a sale.
+        </p>
+      </div>
+
+      <div class="block-about-us">
+        <h2> Who are we to potential clients? </h2>
+        <p>  We are a convenient solution to people who do not have the time or equipment to make their vehicles look new again.
+        </p>
+      </div>
+
+      <div class="block-about-us">
+        <img src="images/placeholder.png" alt="picture of clients">
+      </div>
+
+      <div class="block-about-us">
+        <h2> Some clients who love us are: </h2>
+        <p> Meticulous car owners who: </p>
+        <ul>
+          <li> want to keep their vehicle in mint condition </li>
+          <li> have a vehicle of sentimental value </li>
+          <li> want to maximize the resale value of a vehicle </li>
+        </ul>
+
+        <p> Parents who: </p>
+        <ul>
+          <li> have young kids </li>
+          <li> own a minivan / SUV  </li>
+          <li> have a vehicle that is beat up from constant family use </li>
+        </ul>
       </div>
     </div>
 
-    <h2> Exterior Detail - $150 </h2>
-    <p> Each Exterior Detail includes the following: </p>
-
-    <div class="container-services">
-      <div class="block-img">
-        <a href = "https://www.sfu.ca/">
-          <img class="image-link" src="images/ext4.jpg" alt="wax & polish">
-          <h3>Wax & Polish</h3>
-          <div class="overlay">
-            <div class="text-overlay">Find out more</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="block-img">
-        <a href = "https://www.sfu.ca/">
-          <img class="image-link" src="images/tire2.jpg" alt="wheel & tire">
-          <h3>Wheel & tire restoration</h3>
-          <div class="overlay">
-            <div class="text-overlay">Find out more</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="block-img">
-        <a href = "https://www.sfu.ca/">
-          <img class="image-link" src="images/engine2.jpg" alt="engine cleanse">
-          <h3>Engine cleanse</h3>
-          <div class="overlay">
-            <div class="text-overlay">Find out more</div>
-          </div>
-        </a>
-      </div>
-    </div>
-
-    <h2> Interior Detail - $100 </h2>
-    <p> Each Interior Detail includes the following: </p>
-
-    <div class="container-services">
-      <div class="block-img">
-        <a href = "https://www.sfu.ca/">
-          <img class="image-link" src="images/int4.png" alt="trim cleanse">
-          <h3>Trim cleanse</h3>
-          <div class="overlay">
-            <div class="text-overlay">Find out more</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="block-img">
-        <a href = "https://www.sfu.ca/">
-          <img class="image-link" src="images/int3.jpeg" alt="wipe down">
-          <h3>Wipe down</h3>
-          <div class="overlay">
-            <div class="text-overlay">Find out more</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="block-img">
-        <a href = "https://www.sfu.ca/">
-          <img class="image-link" src="images/interior.jpg" alt="vaccuum & shampoo">
-          <h3>Vaccuum & shampoo</h3>
-          <div class="overlay">
-            <div class="text-overlay">Find out more</div>
-          </div>
-        </a>
-      </div>
-    </div>
   </body>
