--- a/home.html
+++ b/home.html
@@ -8,7 +8,6 @@
     <title> Home </title>
     <link href="css/main.css" rel="stylesheet">
     <link href="css/queries.css" rel="stylesheet">
-
   </head>
 
   <body>
@@ -45,48 +44,39 @@
     </div>
 
     <div class="container-about-us">
+
+      <div class="block-about-us">
+        <h2> Who are we? </h2>
+        <img src="images/placeholder.png" alt="picture of a car being detailed">
+      </div>
+
+      <div class="block-about-us">
+        <p> Automobile Detailing is a mobile automotive detailing company. We come to your home and make the interior and exterior of your vehicle look brand new! This includes carpet steaming, full waxes, and much more to restore the look of your vehicle.
+        </p>
+        <p> Our services appeal to anyone wanting their vehicle to look showroom ready for personal satisfaction, maintenance, or in preparation for a sale. We are a convenient solution to people who do not have the time or equipment to make their vehicles look new again.  Our services appeal to anyone wanting their vehicle to look showroom ready for personal satisfaction, maintenance, or in preparation for a sale.
+        </p>
+      </div>
+
+
       <div class="block-about-us">
         <h2> Company updates </h2>
         <img src="images/placeholder.png" alt="picture of staff">
       </div>
 
       <div class="block-about-us">
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </p>
-      </div>
-
-      <div class="block-about-us">
-        <h2> What do we offer? </h2>
-        <p> Automobile Detailing is a mobile automotive detailing company. We come to your home and make the interior and exterior of your vehicle look brand new! This includes carpet steaming, full waxes, and much more to restore the look of your vehicle.
+        <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor i
         </p>
-      </div>
-
-      <div class="block-about-us">
-        <img src="images/placeholder.png" alt="picture a work truck in a driveway">
-      </div>
-
-      <div class="block-about-us">
-        <h2> Why book us? </h2>
-        <img src="images/placeholder.png" alt="picture of shiny car">
-      </div>
-
-      <div class="block-about-us">
-        <p>Our services appeal to anyone wanting their vehicle to look showroom ready for personal satisfaction, maintenance, or in preparation for a sale.
-        </p>
-      </div>
-
-      <div class="block-about-us">
-        <h2> Who are we to potential clients? </h2>
-        <p>  We are a convenient solution to people who do not have the time or equipment to make their vehicles look new again.
-        </p>
-      </div>
-
-      <div class="block-about-us">
-        <img src="images/placeholder.png" alt="picture of clients">
       </div>
 
       <div class="block-about-us">
         <h2> Some clients who love us are: </h2>
+        <img src="images/placeholder.png" alt="picture of happy customers">
+      </div>
+
+      <div class="block-about-us">
         <p> Meticulous car owners who: </p>
         <ul>
           <li> want to keep their vehicle in mint condition </li>
@@ -102,5 +92,16 @@
         </ul>
       </div>
     </div>
+
+    <div class="parent">
+  <div class="child"></div>
+  <div class="child"></div>
+  <div class="child"></div>
+  <div class="child"></div>
+  <div class="child"></div>
+  <div class="child"></div>
+  <div class="child"></div>
+  <div class="child"></div>
+</div>
 
   </body>
