Started a detailed view
Made wax.html & linked all the services to it.

--- a/services.html
+++ b/services.html
@@ -25,6 +25,7 @@
         <ul>
           <li><a class="button-nav" href="home.html">Home</a> </li>
           <li><a class="button-nav" href="services.html">Services</a> </li>
+          <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
           <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
           <li><a class="button-nav" href="index.html">Style Guide</a> </li>
         </ul>
@@ -49,7 +50,7 @@
 
     <div class="container-services">
       <div class="block-img">
-        <a href = "https://www.sfu.ca/">
+        <a href = "wax.html">
           <img class="image-link" src="images/ext4.jpg" alt="wax & polish">
           <h3>Wax & Polish</h3>
           <div class="overlay">
@@ -59,7 +60,7 @@
       </div>
 
       <div class="block-img">
-        <a href = "https://www.sfu.ca/">
+        <a href = "wax.html">
           <img class="image-link" src="images/tire2.jpg" alt="wheel & tire">
           <h3>Wheel & tire restoration</h3>
           <div class="overlay">
@@ -69,7 +70,7 @@
       </div>
 
       <div class="block-img">
-        <a href = "https://www.sfu.ca/">
+        <a href = "wax.html">
           <img class="image-link" src="images/engine2.jpg" alt="engine cleanse">
           <h3>Engine cleanse</h3>
           <div class="overlay">
@@ -84,7 +85,7 @@
 
     <div class="container-services">
       <div class="block-img">
-        <a href = "https://www.sfu.ca/">
+        <a href = "wax.html">
           <img class="image-link" src="images/int4.png" alt="trim cleanse">
           <h3>Trim cleanse</h3>
           <div class="overlay">
@@ -94,7 +95,7 @@
       </div>
 
       <div class="block-img">
-        <a href = "https://www.sfu.ca/">
+        <a href = "wax.html">
           <img class="image-link" src="images/int3.jpeg" alt="wipe down">
           <h3>Wipe down</h3>
           <div class="overlay">
@@ -104,7 +105,7 @@
       </div>
 
       <div class="block-img">
-        <a href = "https://www.sfu.ca/">
+        <a href = "wax.html">
           <img class="image-link" src="images/interior.jpg" alt="vaccuum & shampoo">
           <h3>Vaccuum & shampoo</h3>
           <div class="overlay">
