Added a "add to cart" button for the services
updated services & style guide pages

--- a/index.html
+++ b/index.html
@@ -335,6 +335,10 @@
           </div>
         </div>
 
+        <div class="container-payment">
+          <a class="button-nav" href="checkout.html">Add to Cart</a>
+        </div>
+
         <h2> Interior Detail - $100 </h2>
         <p> Each Interior Detail includes the following: </p>
 
@@ -370,6 +374,10 @@
           </div>
         </div>
       </section>
+
+      <div class="container-payment">
+        <a class="button-nav" href="checkout.html">Add to Cart</a>
+      </div>
 
       <section class="element">
         <h3> CHECKOUT & PAYMENT </h3>
