--- a/services.html
+++ b/services.html
@@ -46,6 +46,7 @@
     </div>
 
     <h2> Exterior Detail - $150 </h2>
+
     <p> Each Exterior Detail includes the following: </p>
 
     <div class="container-services">
@@ -78,6 +79,10 @@
           </div>
         </a>
       </div>
+    </div>
+
+    <div class="container-payment">
+      <a class="button-nav" href="checkout.html">Add to Cart</a>
     </div>
 
     <h2> Interior Detail - $100 </h2>
@@ -114,4 +119,9 @@
         </a>
       </div>
     </div>
+
+    <div class="container-payment">
+      <a class="button-nav" href="checkout.html">Add to Cart</a>
+    </div>
+
   </body>
