--- a/contact.html
+++ b/contact.html
@@ -36,15 +36,27 @@
             </div>
             <div class="header-text">
                <h1>Contact Us</h1>
-               <p>Have any questions or comments? Drop us a message below</p>
+               <p>Have any questions or comments? </p>
             </div>
          </div>
       </div>
       <div class="container-contact-us">
          <div class="block-contact-us">
-            <h2>Contact Us</h2>
-            <p>Please fill out your full name, email and any question/comments
-            <p>
+            <h2>Drop us a message below</h2>
+            <h3> Question / comment is regarding: </h3>
+            <form method="get" action="#">
+              <input type="radio" id="ext-detail" name="type" value="ext-detail">
+              <label for="car">Exterior Detail</label><br>
+              <input type="radio" id="int-detail" name="type" value="int-detail">
+              <label for="SUV">Interior Detail</label><br>
+              <input type="radio" id="comp-updates" name="type" value="comp-updates">
+              <label for="truck">Company updates</label><br>
+              <input type="radio" id="other" name="type" value="other">
+              <label for="truck">Other</label><br>
+            </form>
+
+            <h3> Your details: </h3>
+            <p>Please fill out your full name, email and any question/comments </p>
             <form method="post" action="#">
                <label class="input-text-label" for="name"> Name </label>
                <input class="input-text-about-us" type="text" id = "name" name="name">
