--- a/wax.html
+++ b/wax.html
@@ -75,4 +75,8 @@
       <img class="image-link" src="images/ext9.jpeg" alt="before vs after wax & polish 3">
     </div>
   </div>
+
+  <div class="container-payment">
+    <a class="button-nav" href="checkout.html">Back to Services</a>
+  </div>
 </body>
