Validated html and css
All html files are valid, but the first line of the main css file (importing the font) still creates an error for some reason. Everything else is valid though.

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             <ul>
                <li><a class="button-nav" href="home.html">Home</a> </li>
                <li><a class="button-nav" href="services.html">Services</a> </li>
-               <li><a class="button-nav"href="contact.html">Contact Us</a> </li>
+               <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
                <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
                <li><a class="button-nav" href="index.html">Style Guide</a> </li>
             </ul>
@@ -46,13 +46,13 @@
             <h3> Question / comment is regarding: </h3>
             <form method="get" action="#">
               <input type="radio" id="ext-detail" name="type" value="ext-detail">
-              <label for="car">Exterior Detail</label><br>
+              <label for="ext-detail">Exterior Detail</label><br>
               <input type="radio" id="int-detail" name="type" value="int-detail">
-              <label for="SUV">Interior Detail</label><br>
+              <label for="int-detail">Interior Detail</label><br>
               <input type="radio" id="comp-updates" name="type" value="comp-updates">
-              <label for="truck">Company updates</label><br>
+              <label for="comp-updates">Company updates</label><br>
               <input type="radio" id="other" name="type" value="other">
-              <label for="truck">Other</label><br>
+              <label for="other">Other</label><br>
             </form>
 
             <h3> Your details: </h3>
