--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title> P01 - Style Guide </title>
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/queries.css" rel="stylesheet">
+
   </head>
 
   <body>
