Fixed "Back to Service" button in "Wax" page
Button was originally linked to checkout, changed it to services

--- a/wax.html
+++ b/wax.html
@@ -83,6 +83,6 @@
   </div>
 
   <div class="container-payment">
-    <a class="button-nav" href="checkout.html">Back to Services</a>
+    <a class="button-nav" href="services.html">Back to Services</a>
   </div>
 </body>
