Linked "service" images to "vacuum"
linked interior detail images in service to vacuum.html

--- a/services.html
+++ b/services.html
@@ -90,7 +90,7 @@
 
     <div class="container-services">
       <div class="block-img">
-        <a href = "wax.html">
+        <a href = "vacuum.html">
           <img class="image-link" src="images/int4.png" alt="trim cleanse">
           <h3>Trim cleanse</h3>
           <div class="overlay">
@@ -100,7 +100,7 @@
       </div>
 
       <div class="block-img">
-        <a href = "wax.html">
+        <a href = "vacuum.html">
           <img class="image-link" src="images/int3.jpeg" alt="wipe down">
           <h3>Wipe down</h3>
           <div class="overlay">
@@ -110,7 +110,7 @@
       </div>
 
       <div class="block-img">
-        <a href = "wax.html">
+        <a href = "vacuum.html">
           <img class="image-link" src="images/interior.jpg" alt="vaccuum & shampoo">
           <h3>Vaccuum & shampoo</h3>
           <div class="overlay">
