--- a/citations.html
+++ b/citations.html
@@ -86,6 +86,22 @@
       <li> Trim cleanse (int4.png): Anthony's Auto Salon (2020). Retrieved from <a class="link" href="http://anthonysautosalon.com/services/interior-detail  "> here </a> </li>
     </ul>
 
+    <h3> Images: Services - Detailed View (Wax & Polish) </h3>
+    <ul>
+      <li> Washing seat(int5.jpg): AutoGuide (2020). Retrieved from <a class="link" href="https://www.autoguide.com/best-car-upholstery-cleaners"> here </a> </li>
+
+      <li> Cleaning vents (int3.jpg): Top Car Detailer (n.d). Retrieved from <a class="link" href="https://www.pinterest.ca/pin/496381190158294736/"> here </a> </li>
+
+      <li> Steaming (int4.jpg): Auto Success (2020). Retrieved from <a class="link" href="https://www.autosuccessonline.com/best-practices-for-steam-cleaning-car-interiors-and-exteriors/"> here </a> </li>
+
+      <li> Foot Rest(int7.jpg): Valley Driving School (2019). Retrieved from <a class="link" href="https://www.valleydrivingschool.com/blog/main/spring-cleaning-for-your-vehicle"> here </a> </li>
+
+      <li> Seat scrub (int8.jpg): Fresh Mobile Car Valeting (n.d). Retrieved from <a class="link" href="https://www.freshcarvaleting.com/how-to-shampoo-your-car-seats-edinburgh/"> here </a> </li>
+
+      <li> Chair vacuum (int9.jpg): Brandon Ford (2017). Retrieved from <a class="link" href="https://www.brandonford.com/blog/top-4-interior-car-maintenance-tips/"> here </a> </li>
+
+    </ul>
+
     <h3> Images: Home Page </h3>
     <ul>
       <li> Car waxing (wax.jpg): iStock Photo (2018). Retrieved from <a class="link" href="https://www.istockphoto.com/photo/car-polish-wax-worker-hands-applying-protective-tape-before-polishing-buffing-and-gm1060499948-283474997"> here </a> </li>
