Added sections to all the webpages
Added a 2 or 3 sections per webpage to try and make things more semantic

--- a/checkout.html
+++ b/checkout.html
@@ -31,17 +31,19 @@
       </div>
     </nav>
 
-    <div class="container">
-      <div class="block">
-        <div class="crop-header">
-          <img src="images/ext.jpg" alt="header">
-        </div>
-        <div class="header-text">
-          <h1>Checkout</h1>
-          <p>Convenient online transactions.</p>
+    <section>
+      <div class="container">
+        <div class="block">
+          <div class="crop-header">
+            <img src="images/ext.jpg" alt="header">
+          </div>
+          <div class="header-text">
+            <h1>Checkout</h1>
+            <p>Convenient online transactions.</p>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <section class="container-payment">
       <div class="block-payment">
