--- a/citations.html
+++ b/citations.html
@@ -32,19 +32,21 @@
   </nav>
 
   <!-- reference for flexbox gallery for images from https://css-tricks.com/adaptive-photo-layout-with-flexbox/ -->
-  <div class="container">
-    <div class="block">
-      <div class="crop-header">
-        <img src="images/ext.jpg" alt="detailing header">
-      </div>
-      <div class="header-text">
-        <h1>Citations</h1>
-        <p> References to all sources used.</p>
+  <section>
+    <div class="container">
+      <div class="block">
+        <div class="crop-header">
+          <img src="images/ext.jpg" alt="detailing header">
+        </div>
+        <div class="header-text">
+          <h1>Citations</h1>
+          <p> References to all sources used.</p>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <section id="citations">
+  <section>
     <h3> Font </h3>
     <ul>
       <li> Montserrat: Ulanovsky, J. (2017). Retrieved from <a class="link" href="https://fonts.google.com/specimen/Montserrat?preview.text_type=custom "> here </a> </li>
@@ -108,7 +110,7 @@
 
       <li> Picture of staff detailing (detailers.jpeg): Supreme Clean Auto Detailing LA (n.d). Retrieved from <a class="link" href="http://supremecleanautodetailingla.com/"> here </a> </li>
 
-      <li> Family with car (family.jpg): Premium Go Auto (2018). Retrieved from <a class="link" href= "https://premium.goauto.com.au/subaru-shifts-to-family-values/"> here </a> </li>
+      <li> Family with car (family.jpg): Premium Go Auto (2018). Retrieved from <a class="link" href="https://premium.goauto.com.au/subaru-shifts-to-family-values/"> here </a> </li>
     </ul>
   </section>
 
