--- a/home.html
+++ b/home.html
@@ -2,50 +2,52 @@
 <!--I used the Style Guide Template as reference -->
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title> Home </title>
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/queries.css" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title> Home </title>
+  <link href="css/main.css" rel="stylesheet">
+  <link href="css/queries.css" rel="stylesheet">
+</head>
 
-  <body>
-    <nav>
-      <!-- reference for nav bar from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_topnav -->
-      <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_topnav_centered -->
-      <div class="topnav">
-        <div class="topnav-left">
-          <span class="auto-detailing-font-top"> AUTO
-            <span class="mobile-font-top"> MOBILE </span>
-            <span class="detailing-font-top"> DETAILING </span>
-          </span>
-        </div>
-        <ul>
-          <li><a class="button-nav" href="home.html">Home</a> </li>
-          <li><a class="button-nav" href="services.html">Services</a> </li>
-          <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
-          <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
-          <li><a class="button-nav" href="index.html">Style Guide</a> </li>
-        </ul>
+<body>
+  <nav>
+    <!-- reference for nav bar from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_topnav -->
+    <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_topnav_centered -->
+    <div class="topnav">
+      <div class="topnav-left">
+        <span class="auto-detailing-font-top"> AUTO
+          <span class="mobile-font-top"> MOBILE </span>
+          <span class="detailing-font-top"> DETAILING </span>
+        </span>
       </div>
-    </nav>
+      <ul>
+        <li><a class="button-nav" href="home.html">Home</a> </li>
+        <li><a class="button-nav" href="services.html">Services</a> </li>
+        <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
+        <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
+        <li><a class="button-nav" href="index.html">Style Guide</a> </li>
+      </ul>
+    </div>
+  </nav>
 
-    <!-- reference for flexbox gallery for images from https://css-tricks.com/adaptive-photo-layout-with-flexbox/ -->
+  <!-- reference for flexbox gallery for images from https://css-tricks.com/adaptive-photo-layout-with-flexbox/ -->
+  <section>
     <div class="container">
       <div class="block">
-          <div class="crop-header">
-            <img src="images/ext.jpg" alt="detailing header">
-          </div>
-          <div class="header-text">
-            <h1>About Us</h1>
-            <p> Company updates & who we are.</p>
-          </div>
+        <div class="crop-header">
+          <img src="images/ext.jpg" alt="detailing header">
         </div>
+        <div class="header-text">
+          <h1>About Us</h1>
+          <p> Company updates & who we are.</p>
+        </div>
+      </div>
     </div>
+  </section>
 
+  <section>
     <div class="container-about-us">
-
       <div class="block-about-us">
         <h2> Company updates </h2>
         <!-- image from https://www.istockphoto.com/photo/car-polish-wax-worker-hands-applying-protective-tape-before-polishing-buffing-and-gm1060499948-283474997 -->
@@ -53,9 +55,11 @@
       </div>
 
       <div class="block-about-us">
-        <p> We will be doing one giveaway a month starting April! If you've booked with us within the past six months or from this point on, you will be automatically included in each month's raffle. Our lucky winners will get to choose between either a Full Exterior Detail or Full Interior Detail, free of charge.
+        <p> We will be doing one giveaway a month starting April! If you've booked with us within the past six months or from this point on, you will be automatically included in each month's raffle. Our lucky winners will get to choose between either
+          a Full Exterior Detail or Full Interior Detail, free of charge.
         </p>
-        <p> Stay tuned for more company updates! We come out with regular updates regarding promos, new products, services, and other company news. If you have any questions, please click <a class="link" href="contact.html"> here </a> to contact us. We typically respond within two business days.
+        <p> Stay tuned for more company updates! We come out with regular updates regarding promos, new products, services, and other company news. If you have any questions, please click <a class="link" href="contact.html"> here </a> to contact us. We
+          typically respond within two business days.
         </p>
       </div>
 
@@ -66,9 +70,11 @@
       </div>
 
       <div class="block-about-us">
-        <p> Automobile Detailing is a mobile automotive detailing company. We come to your home and make the interior and exterior of your vehicle look brand new! This includes carpet steaming, full waxes, and much more to restore the look of your vehicle.
+        <p> Automobile Detailing is a mobile automotive detailing company. We come to your home and make the interior and exterior of your vehicle look brand new! This includes carpet steaming, full waxes, and much more to restore the look of your
+          vehicle.
         </p>
-        <p> Our services appeal to anyone wanting their vehicle to look showroom ready for personal satisfaction, maintenance, or in preparation for a sale. We are a convenient solution to people who do not have the time or equipment to make their vehicles look new again.  Our services appeal to anyone wanting their vehicle to look showroom ready for personal satisfaction, maintenance, or in preparation for a sale.
+        <p> Our services appeal to anyone wanting their vehicle to look showroom ready for personal satisfaction, maintenance, or in preparation for a sale. We are a convenient solution to people who do not have the time or equipment to make their
+          vehicles look new again. Our services appeal to anyone wanting their vehicle to look showroom ready for personal satisfaction, maintenance, or in preparation for a sale.
         </p>
       </div>
 
@@ -89,21 +95,22 @@
         <p> Parents who: </p>
         <ul>
           <li> have young kids </li>
-          <li> own a minivan / SUV  </li>
+          <li> own a minivan / SUV </li>
           <li> have a vehicle that is beat up from constant family use </li>
         </ul>
       </div>
     </div>
 
     <div class="parent">
-  <div class="child"></div>
-  <div class="child"></div>
-  <div class="child"></div>
-  <div class="child"></div>
-  <div class="child"></div>
-  <div class="child"></div>
-  <div class="child"></div>
-  <div class="child"></div>
-</div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+    </div>
+  </section>
 
-  </body>
+</body>
