--- a/services.html
+++ b/services.html
@@ -2,37 +2,38 @@
 <!--I used the Style Guide Template as reference -->
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title> Services </title>
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/queries.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title> Services </title>
+  <link href="css/main.css" rel="stylesheet">
+  <link href="css/queries.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body>
-    <nav>
-      <!-- reference for nav bar from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_topnav -->
-      <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_topnav_centered -->
-      <div class="topnav">
-        <div class="topnav-left">
-          <span class="auto-detailing-font-top"> AUTO
-            <span class="mobile-font-top"> MOBILE </span>
-            <span class="detailing-font-top"> DETAILING </span>
-          </span>
-        </div>
-        <ul>
-          <li><a class="button-nav" href="home.html">Home</a> </li>
-          <li><a class="button-nav" href="services.html">Services</a> </li>
-          <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
-          <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
-          <li><a class="button-nav" href="index.html">Style Guide</a> </li>
-        </ul>
+<body>
+  <nav>
+    <!-- reference for nav bar from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_topnav -->
+    <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_topnav_centered -->
+    <div class="topnav">
+      <div class="topnav-left">
+        <span class="auto-detailing-font-top"> AUTO
+          <span class="mobile-font-top"> MOBILE </span>
+          <span class="detailing-font-top"> DETAILING </span>
+        </span>
       </div>
-    </nav>
+      <ul>
+        <li><a class="button-nav" href="home.html">Home</a> </li>
+        <li><a class="button-nav" href="services.html">Services</a> </li>
+        <li><a class="button-nav" href="contact.html">Contact Us</a> </li>
+        <li><a class="button-nav" href="checkout.html">Checkout</a> </li>
+        <li><a class="button-nav" href="index.html">Style Guide</a> </li>
+      </ul>
+    </div>
+  </nav>
 
-    <!-- reference for flexbox gallery for images from https://css-tricks.com/adaptive-photo-layout-with-flexbox/ -->
+  <!-- reference for flexbox gallery for images from https://css-tricks.com/adaptive-photo-layout-with-flexbox/ -->
+  <section>
     <div class="container">
       <div class="block">
         <div class="crop-header">
@@ -44,14 +45,16 @@
         </div>
       </div>
     </div>
+  </section>
 
+  <section>
     <h2> Exterior Detail - $150 </h2>
 
     <p> Each Exterior Detail includes the following: </p>
 
     <div class="container-services">
       <div class="block-img">
-        <a href = "wax.html">
+        <a href="wax.html">
           <img class="image-link" src="images/ext4.jpg" alt="wax & polish">
           <h3>Wax & Polish</h3>
           <div class="overlay">
@@ -61,7 +64,7 @@
       </div>
 
       <div class="block-img">
-        <a href = "wax.html">
+        <a href="wax.html">
           <img class="image-link" src="images/tire2.jpg" alt="wheel & tire">
           <h3>Wheel & tire restoration</h3>
           <div class="overlay">
@@ -71,7 +74,7 @@
       </div>
 
       <div class="block-img">
-        <a href = "wax.html">
+        <a href="wax.html">
           <img class="image-link" src="images/engine2.jpg" alt="engine cleanse">
           <h3>Engine cleanse</h3>
           <div class="overlay">
@@ -84,13 +87,15 @@
     <div class="container-payment">
       <a class="button-nav" href="checkout.html">Add to Cart</a>
     </div>
+  </section>
 
+  <section>
     <h2> Interior Detail - $100 </h2>
     <p> Each Interior Detail includes the following: </p>
 
     <div class="container-services">
       <div class="block-img">
-        <a href = "vacuum.html">
+        <a href="vacuum.html">
           <img class="image-link" src="images/int4.png" alt="trim cleanse">
           <h3>Trim cleanse</h3>
           <div class="overlay">
@@ -100,7 +105,7 @@
       </div>
 
       <div class="block-img">
-        <a href = "vacuum.html">
+        <a href="vacuum.html">
           <img class="image-link" src="images/int3.jpeg" alt="wipe down">
           <h3>Wipe down</h3>
           <div class="overlay">
@@ -110,7 +115,7 @@
       </div>
 
       <div class="block-img">
-        <a href = "vacuum.html">
+        <a href="vacuum.html">
           <img class="image-link" src="images/interior.jpg" alt="vaccuum & shampoo">
           <h3>Vaccuum & shampoo</h3>
           <div class="overlay">
@@ -123,5 +128,7 @@
     <div class="container-payment">
       <a class="button-nav" href="checkout.html">Add to Cart</a>
     </div>
+    
+  </section>
 
-  </body>
+</body>
