Auto stash before merge of "main" and "origin/main"

--- a/vacuum.html
+++ b/vacuum.html
@@ -85,8 +85,9 @@
       </div>
     </div>
 
-    <div class="container-payment">
-      <a class="button-nav" href="services.html">Back to Services</a>
+    <div class="block-img">
+      <!-- image from https://www.freshcarvaleting.com/how-to-shampoo-your-car-seats-edinburgh/ -->
+      <img class="image-link" src="images/int10.jpg" alt="vacuum & shampoo vaccum chair">
     </div>
 
   </section>
