Started working on mobile queries
The title and navigation buttons still need a lot of work.

--- a/checkout.html
+++ b/checkout.html
@@ -29,6 +29,9 @@
           <li><a class="button-nav" href="index.html">Style Guide</a> </li>
         </ul>
       </div>
+      <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a> -->
     </nav>
 
     <section>
