--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
       <div class="topnav-left">
         <span class="auto-detailing-font-top"> AUTO
           <span class="mobile-font-top"> MOBILE </span>
-          <span class="detailing-font-top"> DETAILING </span>
+          <span> DETAILING </span>
         </span>
       </div>
       <ul>
