--- a/vacuum.html
+++ b/vacuum.html
@@ -54,7 +54,7 @@
       <img src="images/int5.jpg" alt="vaccuum & shampoo wash seat">
     </div>
 
-    <div class="block-about-us">
+    <div class="block-about-us ">
       <h2> What is it?</h2>
       <p> Whether you need the hardest stains removed to cleaning up crumbs, we'll get your vechicles interior as if it was brand new. We pride ourselves with having the best Vaccuum & Shampoo service you can get. The service includes:
       </p>
@@ -64,6 +64,7 @@
         <li> Stain removal </li>
       </ul>
       <a class="button-nav" href="checkout.html">Add to Cart</a>
+      <a class="button-nav" href="services.html">Back to Services</a>
     </div>
   </section>
 
