--- a/wax.html
+++ b/wax.html
@@ -64,6 +64,7 @@
           <li> Full body wax </li>
         </ul>
         <a class="button-nav" href="checkout.html">Add to Cart</a>
+        <a class="button-nav" href="services.html">Back to Services</a>
       </div>
 
     </section>
