--- a/vacuum.html
+++ b/vacuum.html
@@ -43,7 +43,7 @@
           <img src="images/ext.jpg" alt="detailing header">
         </div>
         <header class="header-text">
-          <h1>Vaccuum & Shampoo</h1>
+          <h1>Vacuum & Shampoo</h1>
           <p> A detailed overview.</p>
         </header>
       </div>
